Fix T38597: cycles status bar missing some updates.